--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.7.0",
     "prettier": "^3.8.1",
+    "sass-embedded": "^1.97.3",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vue-tsc": "^3.1.4"
