--- a/print-extension/extension/manifest.json
+++ b/print-extension/extension/manifest.json
@@ -4,15 +4,24 @@
   "version": "1.0.0",
   "description": "桥接云前端与本地打印服务，用于 RFID 标签 ZPL 打印",
   "permissions": [],
-  "host_permissions": ["http://127.0.0.1:8765/*", "http://localhost:5173/*"],
+  "host_permissions": [
+    "http://127.0.0.1:8765/*",
+    "http://localhost:5173/*"
+  ],
   "background": {
     "service_worker": "background.js"
   },
   "content_scripts": [
     {
-      "matches": ["http://localhost:*/*", "http://127.0.0.1:*/*", "https://*/*"],
+      "matches": [
+        "http://localhost:*/*",
+        "http://127.0.0.1:*/*",
+        "http://*/*",
+        "https://*/*"
+      ],
       "js": ["content.js"],
-      "run_at": "document_start"
+      "run_at": "document_start",
+      "all_frames": true
     }
   ]
 }
