--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.19",
     "element-plus": "^2.13.1",
     "fabric": "^7.1.0",
+    "jsbarcode": "^3.12.3",
     "lodash-es": "^4.17.23",
     "pinia": "^3.0.4",
     "socket.io-client": "^4.8.3",
