--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsbarcode": "^3.12.3",
     "lodash-es": "^4.17.23",
     "pinia": "^3.0.4",
+    "qrcode": "^1.5.4",
     "socket.io-client": "^4.8.3",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/qrcode": "^1.5.6",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-vue": "^6.0.1",
